modification du nom de l'image du header

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -78,7 +78,7 @@ nav{
 }
 .headerImg{
     background-color: indianred;
-    background: url(/asset/img/imageATL.png) 50% no-repeat;
+    background: url(/asset/img/header.png) 50% no-repeat;
     background-size: cover;
     height: 60vh;
 }
